--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=Mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/freshlog
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+springdoc.api-docs.path=/freshlog/docs
 spring.jpa.show-sql=true
