--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=freshlog
-spring.datasource.username=root
-spring.datasource.password=Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/freshlog
+
+# DB Connection
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-springdoc.api-docs.path=/freshlog/docs
 spring.jpa.show-sql=true
+
+# Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v1/api-docs
